--- a/platformio.ini
+++ b/platformio.ini
@@ -21,5 +21,7 @@ lib_deps =
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.1
 	adafruit/Adafruit BusIO@^1.7.5
 	mathertel/OneButton@0.0.0-alpha+sha.eb583d713a
+;	OneButton-master
 	khoih.prog/ESP_WifiManager@^1.7.2
 	adafruit/Adafruit SSD1306@^2.4.6
+	adafruit/Adafruit NeoPixel@^1.8.2
