--- a/platformio.ini
+++ b/platformio.ini
@@ -17,11 +17,12 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.10
 	adafruit/Adafruit MQTT Library@^2.4.0
 	bblanchon/ArduinoJson@^6.18.0
-	adafruit/Adafruit MLX90614 Library@^1.1.1
+	adafruit/Adafruit MLX90614 Library@^2.1.3
 	sparkfun/SparkFun MAX3010x Pulse and Proximity Sensor Library@^1.1.1
 	adafruit/Adafruit BusIO@^1.7.5
-	mathertel/OneButton@0.0.0-alpha+sha.eb583d713a
-;	OneButton-master
-	khoih.prog/ESP_WifiManager@^1.7.2
-	adafruit/Adafruit SSD1306@^2.4.6
-	adafruit/Adafruit NeoPixel@^1.8.2
+	adafruit/Adafruit NeoPixel@^1.10.7
+	adafruit/Adafruit SSD1306@^2.5.7
+	mathertel/OneButton@^2.0.3
+	khoih-prog/ESP_WifiManager@^1.12.1
+lib_ignore = 
+	WiFi101
